--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "homepage": "https://github.com/wellingtonsilverio/cpfagora#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "request": "^2.88.0"
   },
