--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "serve": "nodemon index.js",
+    "start": "npm run build && node dist/index.js",
+    "build": "tsc",
+    "serve": "nodemon --watch src --exec npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,9 +26,16 @@
   },
   "homepage": "https://github.com/wellingtonsilverio/cpfagora#readme",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/compression": "0.0.36",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.24",
+    "@types/request": "^2.48.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
