--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run build && node dist/index.js",
     "build": "tsc",
+    "build-watch": "tsc -w",
     "serve": "nodemon --watch src --exec npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,6 +37,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
+    "dotenv-expand": "^5.1.0",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
