--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
-    "@types/mongoose": "^5.3.24",
+    "@types/mongoose": "^5.3.25",
     "@types/request": "^2.48.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
@@ -42,10 +42,11 @@
     "dotenv-expand": "^5.1.0",
     "express": "^4.16.4",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.5.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.11",
+    "typescript": "^3.4.2"
   }
 }
