--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.5.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "typescript": "^3.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11",
-    "typescript": "^3.4.2"
+    "nodemon": "^1.18.11"
   }
 }
