--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "ESNext",
+		"target": "ES6",
 		"noImplicitAny": true,
 		"moduleResolution": "node",
 		"sourceMap": true,
