--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "dotenv": "^7.0.0",
     "dotenv-expand": "^5.1.0",
     "express": "^4.16.4",
+    "iplocation": "^6.1.0",
     "moment": "^2.24.0",
     "mongoose": "^5.5.0",
     "request": "^2.88.0",
+    "request-ip": "^2.1.3",
     "typescript": "^3.4.2"
   },
   "devDependencies": {
